package launcher;
import guis.VentanaInicioDeSesion;
import modelo.*;


public class Launcher {
    public static void main(String[] args) throws JugadorNoEncontradoException {
        VentanaInicioDeSesion ventanaInicioDeSesion = new VentanaInicioDeSesion();
        ventanaInicioDeSesion.setVisible(true);
    }


}