package modelo;

public class AnimalNoEncontradoException extends Exception {
}