package modelo;

public class JugadorNoEncontradoException extends Exception {

    /*public JugadorNoEncontradoException(String rut) {
        super("No se ha encontrado el jugador con rut: " + rut);
    }*/
    public JugadorNoEncontradoException() {

    }
}